fix(kit): `Toast` fix positioning on mobile (#13936)

--- a/projects/kit/components/toast/toast.style.less
+++ b/projects/kit/components/toast/toast.style.less
@@ -2,7 +2,7 @@
 
 :host:host {
     inset: 1.625rem 0;
-    margin: 0 2rem;
+    margin: 0 auto;
     touch-action: none;
     animation-fill-mode: both;
 
